--- a/package.json
+++ b/package.json
@@ -3,25 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@redux-saga/types": "^1.1.0",
-    "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^14.1.1",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.29",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.2",
+    "@chakra-ui/react": "^1.8.8",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.1.3",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@redux-saga/types": "^1.1.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.1.1",
+    "@types/axios-mock-adapter": "^1.10.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.29",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
+    "axios-mock-adapter": "^1.20.0",
     "eslint": "^8.14.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
