--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,6 +6,7 @@
         "stylelint-order"
     ],
     "rules": {
-        "order/properties-alphabetical-order": true
+        "order/properties-alphabetical-order": true,
+        "scss/at-import-partial-extension": null
     }
 }
